--- a/index.html
+++ b/index.html
@@ -6,16 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/6835d559de.js" crossorigin="anonymous"></script>
   </head>
+
   <body>
     <div class="wrapper">
+
       <header>
         <h1>Password Generator</h1>
       </header>
+
       <div class="card">
+
         <div class="card-header">
-          <h2>Generate a Password</h2>
+          <h2><i class="fas fa-lock"></i>&nbsp;For Your Peace of Mind</h2>
         </div>
+
         <div class="card-body">
           <textarea
             readonly
@@ -24,9 +30,11 @@
             aria-label="Generated Password"
           ></textarea>
         </div>
+
         <div class="card-footer">
-          <button id="generate" class="btn">Generate Password</button>
+          <button id="generate" class="btn">Click Here</button>
         </div>
+
       </div>
     </div>
     <script src="script.js"></script>
